[package]
name = "xlim"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"
description = "A lightweight NoSQL database written in Rust"
authors = ["xlim-team"]

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
rocksdb = "0.21"
